Add API error documentation, change code documentation format
