# app/Http/Controllers/Api/BlogController.php
@@ -61,6 +61,7 @@ class BlogController extends Controller
      *      @OA\Response(
      *          response=404,
      *          description="Not found",
+     *          @OA\JsonContent(ref="#/components/schemas/NotFoundException")
      *      )
      * )
      */
