# app/Http/Controllers/Api/NewsController.php
@@ -61,6 +61,7 @@ class NewsController extends Controller
      *      @OA\Response(
      *          response=404,
      *          description="Not found",
+     *          @OA\JsonContent(ref="#/components/schemas/NotFoundException")
      *      )
      * )
      */
